# img_fastapi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
src/: Dockerfile  pyproject.toml
src/app/: app.py  db.py
src/app/auth/: auth_config.py  manager.py  tasks.py
src/app/common/: celery_worker.py  settings.py
src/app/images/: deps.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py  tasks.py
src/app/users/: models.py  schemas.py
src/tests/: conftest.py
src/tests/unit/: test_image_services.py
