[tool.poetry]
name = "img_fastapi"
version = "0.1.0"
description = ""
authors = ["lattern31 <latetrn31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
envparse = "^0.2.0"
celery = "^5.3.6"
redis = "^5.0.3"
python-multipart = "^0.0.9"
pil-tools = "^1.1.0"
aiofiles = "^23.2.1"
flower = "^2.0.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[virtualenvs]
in-project = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
